# snap-vocab

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml  secrets-check.yml
api/: db.py  deps.py  main.py  settings.py
api/models/: card.py
api/routes/: admin.py  cards.py  dashboard.py  stats.py  webhook.py
bot/: scheduler.py  srs.py
bot/handlers/: feedback.py  review.py
docs/steps/: 07-deploy.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
llm/: base.py  claude.py  ollama.py  openrouter.py
migrations/: 001_cards.sql  002_review_logs.sql  003_pending_reviews.sql  004_pending_reviews_question_type.sql
notification/: base.py  telegram.py
prompts/: extract.py  generate.py  grade.py
static/: dashboard.css  dashboard.js
templates/: dashboard.html  login.html
tests/: conftest.py  test_admin_trigger.py  test_cards.py  test_llm_adapters.py  test_srs.py  test_stats.py  test_webhook.py
