[project]
name = "snap-vocab"
version = "0.1.0"
description = "LLM 대화에서 영어 표현을 캡처하고 텔레그램으로 SRS 복습 문제를 보내주는 셀프호스팅 학습 도구"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["api", "bot", "llm", "notification", "prompts", "extension"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
