[project]
name = "snap-vocab"
version = "0.1.0"
description = "Self-hosted tool that captures English expressions from LLM chats and sends spaced-repetition review questions via Telegram"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "anthropic>=0.104.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["*.md"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["api", "bot", "llm", "notification", "prompts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.hatch.build.targets.wheel]
packages = ["api", "bot", "llm", "notification", "prompts", "extension"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
